# prompt-lib

./: .gitignore  .pre-commit-config.yaml  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml
portal/: middleware.py  urls.py  views.py
portal/static/css/: input.css  style.css
portal/templates/: base.html  landing.html  login.html
portal/templates/components/: header.html
portal/templates/forms/: login.html
portal/templates/project/: new.html
prompt_lib/: asgi.py  settings.py  urls.py  wsgi.py
